blog: fix pagination layout shift, fix track expression, add ng deploy

--- a/src/app/routes/blog/blog.component.scss
+++ b/src/app/routes/blog/blog.component.scss
@@ -13,6 +13,7 @@ main {
 
 section {
   display: flex;
+  flex: 1;
   flex-direction: column;
   align-items: center;
   padding: 0 6vw;
@@ -46,6 +47,7 @@ h1 {
   flex-direction: column;
   gap: 2em;
   padding: 0;
+  flex: 1;
 
   li {
     list-style: none;
